:art: fix layout shift on android viewport

--- a/web/css/setup.css
+++ b/web/css/setup.css
@@ -1,5 +1,4 @@
 body {
-  margin-top: 5vh;
   background-color: var(--pico-background-color);
   color: var(--text-color);
   font-family: var(--pico-font-family);
